# video-overview-sdk

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-03-31-video-overview-sdk-design.md
skills/video-overview/: SKILL.md
skills/video-overview/references/: cli.md  modes-formats-voices.md  pipeline.md  preflight.md  python-api.md  troubleshooting.md
src/video_overview/: __init__.py  cli.py  config.py  core.py  duration.py
src/video_overview/audio/: __init__.py  generator.py
src/video_overview/content/: __init__.py  reader.py
src/video_overview/script/: __init__.py  generator.py
src/video_overview/video/: __init__.py  assembler.py
src/video_overview/visuals/: __init__.py  generator.py
tests/: conftest.py  test_audio_generator.py  test_cache_cli.py  test_cache_exclusion.py  test_cli.py  test_config.py  test_content_reader.py  test_core.py  test_duration.py  test_lazy_imports.py  test_logging.py  test_package_structure.py  test_script_generator.py  test_video_assembler.py  test_visual_generator.py
